[project]
name = "listen-you-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=14.3.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-aws<0.2.24",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.62",
    "langchain-openai>=0.3.18",
    "langchain-tavily>=0.2.0",
    "langgraph>=0.4.7",
    "langgraph-checkpoint-amazon-dynamodb>=0.1.2",
]
